# 2025NewYear

./: .gitignore  .gitmodules
AnalyzeResult/: .gitignore  CMakeLists.txt  analyze.py  analyzer.cpp  progressbar.hpp
conv_font/: .gitignore  FixedHeightFontFormat.py  crlf.py  log_config.toml  misaki.py  ttf.py
load_font/: .clang-tidy  CMakeLists.txt  compile_commands.json  main.c  plain_chunk_list.c  plain_chunk_list.h
load_font/lib/: CMakeLists.txt
load_font/lib/logging/: CMakeLists.txt  simple_logging.c  simple_logging.h
load_font/lib/riff/: CMakeLists.txt  riff_reader.c  riff_reader.h
